--- a/admin.html
+++ b/admin.html
@@ -20,14 +20,17 @@
               <li class="nav-item">
                 <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="./index.html">Log out</a>
+              </li>
               </ul>
           </div>
         </div>
       </nav>
 
 
-    <button class="btn btn-info m-3">Add Goods</button>  <br>
-    <table id="add" class="shadow text-white"  border="1">
+    <button class="btn btn-info m-3" id="realAdd">Add Goods</button>  <br>
+    <table id="add" class="shadow text-white  "  border="1" style="display: none;">
         <tr>
             <td><input type="text" id="goodName" placeholder="Good Name"></td>
             <td><input type="number" id="goodQuantity" placeholder="Quantity"></td>
@@ -38,7 +41,10 @@
             <td colspan="2"><button id="btnAdd" class="btn btn-outline-success">Add Good</button></td>
         </tr>
     </table>
-    <button class="btn btn-info m-2">Remove Goods</button>
+    <table id="showAllGoods" class="text-center text-white shadow border"></table>
+
+    <div id="edits"></div>
+    <!-- <button class="btn btn-info m-2">Remove Goods</button> -->
     <script src="./jquery.min.js"></script>
     <script src="./js/admin.js"></script>    
 </body>
