--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">About</a>
+                <a class="nav-link disabled" href="#">About</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact</a>
@@ -31,6 +31,9 @@
                 <input class="form-control me-2" type="search" placeholder="Search goods" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
+              <li class="nav-item">
+                <a href="#" class="nav-link">Cart</a>
+              </li>
             </ul>
             <button class="btn btn-outline-light mx-4" onclick="signIn()">Sign In</button>
             <button class="btn btn-outline-light mr-5" onclick="signUp()">Sign Up</button>
