I have completed the project

--- a/cart.html
+++ b/cart.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="./index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#">About</a>
@@ -43,7 +43,19 @@
       </nav>
 
       <main>
+        <table class="col-6 mx-auto mt-5 border">
+          <thead>
+              <tr>
+                  <th>Item</th>
+                  <th>Quantity</th>
+                  <th>Unit Price</th>
+                  <th>Total</th>
+              </tr>
+          </thead>
+          <tbody id="goo">
 
+          </tbody>
+        </table>
       </main>
     
     <script src="./jquery.min.js"></script>
