--- a/signIn.html
+++ b/signIn.html
@@ -12,14 +12,14 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-          <a class="navbar-brand" href="#">Navbar</a>
+          <a class="navbar-brand" href="index.html">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" aria-current="page" href="index.html">Home</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link disabled" href="#">About</a>
@@ -40,8 +40,8 @@
       </nav>
 
 
-    <center class="container shadow w-50">
-        <input type="email" class="inputs m-3 p-3" id="emial" placeholder="Email"> <br>
+    <center class="container shadow w-50 p-5">
+        <input type="email" class="inputs m-3 p-3" id="email" placeholder="Email"> <br>
         <input type="password" class="inputs m-3 p-3" id="password" placeholder="Password"> <br>
         <button align='center' class="btn btn-outline-success mb-2" id="signInBtn">Sign In</button> <br>
         <p class="mb-5">I dont't have an account? <a href="./signUp.html">Sign Up</a></p>
