--- a/signUp.html
+++ b/signUp.html
@@ -40,11 +40,11 @@
       </nav>
 
 
-    <center class="container shadow w-50">
+    <center class="container shadow w-50 my-5 py-3">
         <input type="text" class="inputs m-3 p-3" id="fName" placeholder="First name"> <br>
         <input type="text" class="inputs m-3 p-3" id="lName" placeholder="Last name"> <br>
         <input type="tel" class="inputs m-3 p-3" id="phone" placeholder="Phone Number"> <br>
-        <input type="email" class="inputs m-3 p-3" id="emial" placeholder="Email"> <br>
+        <input type="email" class="inputs m-3 p-3" id="email" placeholder="Email"> <br>
         <input type="password" class="inputs m-3 p-3" id="password" placeholder="Password"> <br>
         <button align='center' class="btn btn-outline-success mb-2" id="signUpBtn">Sign Up</button> <br>
         <p class="mb-5">Already have an account? <a href="./signIn.html">Sign In</a></p>
