--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
 </head>
@@ -32,7 +33,10 @@
                 <button class="btn btn-outline-success" type="submit">Search</button>
               </form>
               <li class="nav-item">
-                <a href="#" class="nav-link">Cart</a>
+                <a href="./cart.html" class="nav-link">Cart</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="" id="logOut">Log out</a>
               </li>
             </ul>
             <button class="btn btn-outline-light mx-4" onclick="signIn()">Sign In</button>
